# gemtext

./: 404.html  CNAME  ChangeLog.md  Makefile  README.md  example.gmi  index.html  mkdocs.yml  objects.inv  pyproject.toml
changelog/: index.html
docs/: gemtext.md  index.md
gemtext/: index.html
license/: index.html
search/: search_index.json
src/gemtext/: __init__.py  __main__.py  parser.py
tests/: test_gemtext.py
