[project]
name = "gemtext"
version = "0.1.0"
description = "A simple library for parsing the Gemtext markup language"
readme = "README.md"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
requires-python = ">=3.12"
dependencies = []
license = "MIT"
keywords = [
    "API",
    "library",
    "Gemini",
    "Gemtext",
    "Markup",
    "Hypertext"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://gemtext.davep.dev/"
Repository = "https://github.com/davep/gemtext"
Documentation = "https://gemtext.davep.dev/"
Source = "https://github.com/davep/gemtext"
Issues = "https://github.com/davep/gemtext/issues"
Discussions = "https://github.com/davep/gemtext/discussions"

[project.scripts]
gemtext = "gemtext.__main__:parse_input"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.coverage.run]
omit = [
     "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def _repr_props",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
test = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]